--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^12.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.8.0",
     "recharts": "^3.1.2"
   },
