--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.6",
     "@fontsource-variable/plus-jakarta-sans": "^5.2.6",
     "firebase": "^12.1.0",
     "react": "^19.1.1",
